# kitfind

./: .gitignore  AGENTS.md  README.md  index.embeddings  index.html  index.json  index.tfidf  kitfind.toml  pyproject.toml  schema.json
.github/: CODEOWNERS  renovate.json
.github/workflows/: ci.yml  deploy.yml
pr-preview/pr-1/: index.json
pr-preview/pr-11/: index.embeddings
pr-preview/pr-12/: index.tfidf
pr-preview/pr-14/: index.embeddings  index.tfidf
pr-preview/pr-2/: index.html  index.json  index.tfidf
pr-preview/pr-3/: index.embeddings  index.html  index.json  index.tfidf
pr-preview/pr-4/: index.embeddings  index.json  index.tfidf
pr-preview/pr-5/: index.embeddings  index.html  index.json  index.tfidf
pr-preview/pr-6/: index.json  index.tfidf
pr-preview/pr-7/: index.embeddings  index.json
pr-preview/pr-8/: index.embeddings
pr-preview/pr-9/: index.embeddings  index.tfidf
tools/: build.py  search.js  validate.py
tools/templates/: index.html
tools/tests/: search.test.mjs
