[project]
name = "kitfind"
version = "0.1.0"
description = "AI coding agent skill index aggregator"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "tomli>=2.0",
    "huggingface-hub>=0.24",
    "tokenizers>=0.19",
    "onnxruntime>=1.18",
    "numpy>=1.24",
]
[project.optional-dependencies]
dev = ["mypy>=1.14"]

[tool.mypy]
strict = false
ignore_missing_imports = true
warn_unused_ignores = true


